sorted patients alphabetically by firstname and lastname and fixed a bug on price list regarding the edit button which was not showing while the modal was seen

--- a/src/pages/TreatmentsList/PriceList.css
+++ b/src/pages/TreatmentsList/PriceList.css
@@ -64,6 +64,7 @@
   background: none;
   border: none;
   height: fit-content;
+  cursor: pointer;
 }
 .add-button {
   background: none;
@@ -85,6 +86,7 @@
 .edit-button {
   background: none;
   border: none;
+  cursor: pointer;
 }
 .popup-button-wrapper3 {
   display: flex;
